--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="heading">Cash Register Manager</h1>
+      <h1 class="heading">$ Cash Register Manager $</h1>
       <p class="description">
         Enter the bill amount and cash given by the customer and know minimum
         number of notes to return.
